# the-cube

cube-client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
cube-client/src/components/organisms/: Cube.svelte  index.ts
cube-client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
cube-client/src/routes/cube/: +layout.svelte
cube-client/src/routes/debug/: +page.svelte
cube-client/src/socket/: connection.ts
cube-client/src/store/: socket.ts
cube-controller/: App.tsx  app.json  package-lock.json  package.json
cube-controller/src/socket/: connection.ts  message.ts
cube-renderer/: Cargo.toml
cube-renderer/assets/shaders/: debug-frag.glsl  debug-vert.glsl
cube-renderer/src/: lib.rs
cube-renderer/src/app/: app.rs  mod.rs  state.rs
cube-renderer/src/app/state/: config.rs  keyboard.rs  mod.rs  viewport.rs
cube-renderer/src/camera/: mod.rs
cube-renderer/src/model/: behaviour.rs  buffer.rs  entity.rs  light.rs  material.rs  mesh.rs  mod.rs  renderable.rs
cube-renderer/src/model/transition/: easing.rs  mod.rs
cube-renderer/src/network/: mod.rs  websocket.rs
cube-renderer/src/resources/: assets.rs  mod.rs  shader.rs
cube-renderer/src/sandbox/: cube_behaviour.rs  mod.rs
cube-renderer/src/utils/: message.rs  mod.rs  wasm.rs
cube-server/: go.mod  main.go
cube-server/pkg/websocket/: client.go  websocket.go
