[package]
name = "cube-renderer"
version = "0.1.0"
authors = ["Vinícius Souza <vinicius.rsouza07@gmail.com>"]
description = "It renders The Cube."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'EventTarget',
  'DomWindowResizeEventDetail',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Performance',
]
