[package]
name = "cube-renderer"
version = "0.1.0"
authors = ["Vinícius Souza <vinicius.rsouza07@gmail.com>"]
description = "It renders The Cube."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
nalgebra-glm = "0.18.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Performance',
  'Document',

  'Element',
  'EventTarget',
  "KeyboardEvent",
  'DomWindowResizeEventDetail',
  'HtmlCanvasElement',

  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',

  "BinaryType",
  "Blob",
  "ErrorEvent",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
